Introduce shared icon system Introduces a script to automatically build fluent icons, and replaces all the hardcoded SVGs with mixin references.

--- a/sass/base/_mixins.scss
+++ b/sass/base/_mixins.scss
@@ -1,6 +1,19 @@
+@use '@sass-fairy/url';
+
 @use "sass:list";
 @use "sass:map";
 @use "sass:selector";
+
+@use 'icons';
+
+@mixin icon($size: 20, $svg: icons.$squareRegular20) {
+	content: '';
+	width: $size;
+	height: $size;
+	display: block;
+	background-color: currentColor;
+	mask: url.svg(#{$svg});
+}
 
 @mixin flex-center {
   display: flex;
