--- a/sass/base/components/_form.scss
+++ b/sass/base/components/_form.scss
@@ -1,5 +1,6 @@
 @use '@sass-fairy/url';
 @use '../mixins';
+@use '../icons';
 
 @use './form/bar-item-list';
 @use './form/button';
@@ -69,13 +70,10 @@ div.bb-select {
     content: none;
   }
   &::after {
-    content: '';
     flex-shrink: 0;
-    float: right;
-    width: 20px;
-    height: 20px;
     right: var(--spacingHorizontalMNudge);
-    background-color: currentColor;
-    mask: url.svg('<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M15.854 7.646a.5.5 0 0 1 .001.707l-5.465 5.484a.55.55 0 0 1-.78 0L4.147 8.353a.5.5 0 1 1 .708-.706L10 12.812l5.147-5.165a.5.5 0 0 1 .707-.001" fill="#242424"/></svg>');
+    float: right;
+    
+    @include mixins.icon(20, icons.$chevronDownRegular20);
   }
 }
