--- a/sass/base/main.scss
+++ b/sass/base/main.scss
@@ -1,10 +1,10 @@
 @use "animations";
 @use "fonts";
+@use "icons";
 
 @use "components/form";
 @use "components/contextMenu";
 @use "components/panels";
-@use "components/icons";
 
 @use "components/actionSelector";
 @use "components/header";
