--- a/sass/base/components/_contextMenu.scss
+++ b/sass/base/components/_contextMenu.scss
@@ -1,4 +1,5 @@
 @use "../mixins";
+@use "../icons";
 @use "@sass-fairy/url";
 
 .contextMenu {
@@ -69,14 +70,8 @@
       }
 
       &.parent::after {
-        content: "";
+        @include mixins.icon(20, icons.$chevronRightRegular20);
         margin: 0;
-        width: 20px;
-        height: 20px;
-        background-color: currentColor;
-        mask: url.svg(
-          '<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M7.646 4.147a.5.5 0 0 1 .707-.001l5.484 5.465a.55.55 0 0 1 0 .779l-5.484 5.465a.5.5 0 0 1-.706-.708L12.812 10 7.647 4.854a.5.5 0 0 1-.001-.707" fill="#242424"/></svg>'
-        );
       }
 
       &.enabled, &.marked {
@@ -133,18 +128,12 @@
         padding-inline-start: calc(var(--spacingHorizontalMNudge) + 20px);
       }
       &::after {
-        content: "";
         position: absolute;
         top: 6px;
         left: 6px;
-        width: 20px;
-        height: 20px;
         right: var(--spacingHorizontalMNudge);
-        background-color: currentColor;
         pointer-events: none;
-        mask: url.svg(
-          '<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12.73 13.436a6.5 6.5 0 1 1 .707-.707l3.416 3.418a.5.5 0 0 1-.637.764l-.07-.057zm-.71-.71q.385-.32.707-.706a5.5 5.5 0 1 0-.707.707" fill="#242424"/></svg>'
-        );
+        @include mixins.icon(20, icons.$searchRegular20);
       }
       > div {
         display: none;
