--- a/sass/base/components/_dialogs.scss
+++ b/sass/base/components/_dialogs.scss
@@ -1,4 +1,5 @@
 @use '../mixins';
+@use '../icons';
 @use './dialogSidebarIcons';
 
 @use './dialogs/brushPresets';
@@ -165,22 +166,15 @@ dialog {
 	}
 
 	.dialog_sidebar_pages li {
-		$icon: url(data:image/svg+xml,%3Csvg%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M22%2012c0%205.523-4.477%2010-10%2010S2%2017.523%202%2012%206.477%202%2012%202s10%204.477%2010%2010m-1.5%200a8.5%208.5%200%201%201-17%200%208.5%208.5%200%200%201%2017%200%22%20fill%3D%22%23242424%22%2F%3E%3C%2Fsvg%3E);
-		$icon-filled: url(data:image/svg+xml,%3Csvg%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M12%2022c5.523%200%2010-4.477%2010-10S17.523%202%2012%202%202%206.477%202%2012s4.477%2010%2010%2010%22%20fill%3D%22%23242424%22%2F%3E%3C%2Fsvg%3E);
-
 		&::before {
-			content: "";
-			background-color: currentColor;
-			mask: $icon;
-			inline-size: 24px;
-			block-size: 24px;
+			@include mixins.icon(24, icons.$circleRegular24);
 			flex-shrink: 0;
 		}
 		&.selected {
 			font-weight: var(--fontWeightSemibold);
 			&::before {
+				@include mixins.icon(24, icons.$circleFilled24);
 				color: var(--colorCompoundBrandForeground1);
-				mask: $icon-filled;
 			}
 			&::after {
 				background-color: var(--colorCompoundBrandForeground1);
