--- a/sass/base/components/_mainView.scss
+++ b/sass/base/components/_mainView.scss
@@ -1,5 +1,6 @@
 @use '@sass-fairy/url';
 @use '../mixins';
+@use '../icons';
 
 #center {
     border: var(--strokeWidthThin) solid var(--colorTransparentStroke);
@@ -60,12 +61,7 @@
 	text-align: start;
 	
 	&::before {
-		content: '';
-		width: 20px;
-		height: 20px;
-		background-color: currentColor;
-		pointer-events: none;
-		mask: url.svg('<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M18 10a8 8 0 1 0-16 0 8 8 0 0 0 16 0M9.508 8.91a.5.5 0 0 1 .984 0L10.5 9v4.502l-.008.09a.5.5 0 0 1-.984 0l-.008-.09V9zM9.25 6.75a.75.75 0 1 1 1.5 0 .75.75 0 0 1-1.5 0" fill="#242424"/></svg>');
+        @include mixins.icon(20, icons.$infoFilled20);
 	}
 }
 
