--- a/sass/base/components/dialogs/_theme.scss
+++ b/sass/base/components/dialogs/_theme.scss
@@ -1,4 +1,5 @@
 @use '../../mixins';
+@use '../../icons';
 @use '@sass-fairy/url';
 
 $themeListGrid: var(--spacingHorizontalS);
@@ -37,12 +38,6 @@ $themeListGrid: var(--spacingHorizontalS);
 	height: 20px;
 	margin-inline-end: var(--spacingHorizontalSNudge);
 	i:empty {
-		width: 20px;
-		content: '';
-		margin: 0;
-		width: 20px;
-		height: 20px;
-		background-color: currentColor;
-		mask: url.svg('<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3 6a3 3 0 0 1 3-3h8a3 3 0 0 1 3 3v8a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3zm1 1v7a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V7z" fill="#242424"/></svg>');
+		@include mixins.icon(20, icons.$windowRegular20);
 	}
 }
