--- a/sass/base/components/form/_tool.scss
+++ b/sass/base/components/form/_tool.scss
@@ -1,5 +1,6 @@
 @use '@sass-fairy/url';
 @use '../../mixins';
+@use '../../icons';
 
 // Tools
 .tool {
@@ -93,12 +94,7 @@
         @include mixins.flex-center;
 
         &::after {
-          content: '';
-          display: block;
-          width: 12px;
-          height: 12px;
-          background-color: currentColor;
-          mask: url.svg('<svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2.146 4.646a.5.5 0 0 1 .708 0L6 7.793l3.146-3.147a.5.5 0 1 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 0 1 0-.708" fill="#242424"/></svg>');
+          @include mixins.icon(12, icons.$chevronDownRegular12);
         }
       }
     }
