--- a/sass/base/components/_dialogSidebarIcons.scss
+++ b/sass/base/components/_dialogSidebarIcons.scss
@@ -3,6 +3,8 @@
 
 @use '../icons';
 
+$blockbenchIcon: '<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M22.68 4c-.229.002-.924.053-3.18.208l-8.354.574c-2.79.191-2.515.165-2.648.248-.149.093-.233.251-.282.531-.413 1.996-.745 3.429-1.012 4.59a2 2 0 0 0-.063.281c-.036.2-.035.219.01.281.096.132.211.162 1.044.27 3.157.412 6.454.848 9.363 1.23 1.146.15 2.175.286 2.932.387.854.115.87.115.907.02.03-.074.084-.329.19-.89.437-2.262.944-4.918 1.314-6.8.115-.589.12-.653.063-.752a.5.5 0 0 0-.14-.141c-.037-.022-.006-.038-.144-.037M6.5 11.34a2 2 0 0 0-.321.024c-.147.023-1.298.188-2.557.366-1.26.178-2.342.343-2.406.366-.192.07-.27.261-.178.439.057.11.198.175.643.297l.174.051c4.161 1.168 8.56 2.456 12.45 3.564.219.065.517.18.707.18.143-.038.964-.443 2.825-1.38 1.51-.76 2.77-1.401 2.797-1.425.103-.09.158-.284.104-.368-.011-.016-.159-.05-.328-.075l-2.744-.403c-.148-.023-.6-.09-1.005-.148l-2.757-.401a771 771 0 0 1-3.013-.442L9.7 11.811c-1.846-.266-2.416-.352-2.57-.386a3 3 0 0 0-.63-.084m-1.54 2.993h-.015c-.049.01-1.029 2.111-1.029 2.207 0 .097.07.217.155.263.093.05.152.051.286.004.407-.127.842-.268 1.246-.39 1.207-.362 1.227-.369 1.354-.502.106-.11.3-.516.358-.744a1 1 0 0 1 .052-.14c.018-.034.028-.06.022-.06-.704-.183-1.435-.381-2.101-.564a3 3 0 0 0-.328-.074m12.506 1.64c-.02-.001-.053.014-.112.05l-.411.233c-.441.266-.86.543-1.326.763-.378.237-.545.289-.734.228a8 8 0 0 0-.72-.188.07.07 0 0 0-.062.047c-.014.045-.06.174-.174.488-.183.47-.34.946-.505 1.393-.078.213-.216.703-.214.763.002.059.13.18.23.216.06.022.15.032.211.024 1.152-.466 2.03-1.054 3.01-1.567.3-.157.41-.266.454-.451.036-.155.104-.457.148-.659.022-.103.066-.302.098-.441.167-.744.178-.813.135-.881q-.01-.017-.028-.018" fill="#242424"/></svg>';
+
 @mixin assign-icons($pages, $icons, $filledIcons) {
   @for $i from 1 through list.length($pages) {
     $page: list.nth($pages, $i);
@@ -88,12 +90,12 @@
 	), (
 		icons.$editRegular24
 		icons.$moreHorizontalRegular24
-		icons.$toolboxRegular24
+		icons.$wrenchScrewdriverRegular24
 		icons.$cursorRegular24
 		icons.$documentRegular24
 		icons.$eyeRegular24
 		icons.$selectObjectRegular24
-		'<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M22.68 4c-.229.002-.924.053-3.18.208l-8.354.574c-2.79.191-2.515.165-2.648.248-.149.093-.233.251-.282.531-.413 1.996-.745 3.429-1.012 4.59a2 2 0 0 0-.063.281c-.036.2-.035.219.01.281.096.132.211.162 1.044.27 3.157.412 6.454.848 9.363 1.23 1.146.15 2.175.286 2.932.387.854.115.87.115.907.02.03-.074.084-.329.19-.89.437-2.262.944-4.918 1.314-6.8.115-.589.12-.653.063-.752a.5.5 0 0 0-.14-.141c-.037-.022-.006-.038-.144-.037M6.5 11.34a2 2 0 0 0-.321.024c-.147.023-1.298.188-2.557.366-1.26.178-2.342.343-2.406.366-.192.07-.27.261-.178.439.057.11.198.175.643.297l.174.051c4.161 1.168 8.56 2.456 12.45 3.564.219.065.517.18.707.18.143-.038.964-.443 2.825-1.38 1.51-.76 2.77-1.401 2.797-1.425.103-.09.158-.284.104-.368-.011-.016-.159-.05-.328-.075l-2.744-.403c-.148-.023-.6-.09-1.005-.148l-2.757-.401a771 771 0 0 1-3.013-.442L9.7 11.811c-1.846-.266-2.416-.352-2.57-.386a3 3 0 0 0-.63-.084m-1.54 2.993h-.015c-.049.01-1.029 2.111-1.029 2.207 0 .097.07.217.155.263.093.05.152.051.286.004.407-.127.842-.268 1.246-.39 1.207-.362 1.227-.369 1.354-.502.106-.11.3-.516.358-.744a1 1 0 0 1 .052-.14c.018-.034.028-.06.022-.06-.704-.183-1.435-.381-2.101-.564a3 3 0 0 0-.328-.074m12.506 1.64c-.02-.001-.053.014-.112.05l-.411.233c-.441.266-.86.543-1.326.763-.378.237-.545.289-.734.228a8 8 0 0 0-.72-.188.07.07 0 0 0-.062.047c-.014.045-.06.174-.174.488-.183.47-.34.946-.505 1.393-.078.213-.216.703-.214.763.002.059.13.18.23.216.06.022.15.032.211.024 1.152-.466 2.03-1.054 3.01-1.567.3-.157.41-.266.454-.451.036-.155.104-.457.148-.659.022-.103.066-.302.098-.441.167-.744.178-.813.135-.881q-.01-.017-.028-.018" fill="#242424"/></svg>'
+		$blockbenchIcon
 		icons.$cubeQuickRegular24
 		icons.$transparencySquareRegular24
 		icons.$arrowMoveRegular24
@@ -105,12 +107,12 @@
 	), (
 		icons.$editFilled24
 		icons.$moreHorizontalFilled24
-		icons.$toolboxFilled24
+		icons.$wrenchScrewdriverFilled24
 		icons.$cursorFilled24
 		icons.$documentFilled24
 		icons.$eyeFilled24
 		icons.$selectObjectFilled24
-		''
+		$blockbenchIcon
 		icons.$cubeQuickFilled24
 		icons.$transparencySquareFilled24
 		icons.$arrowMoveFilled24
@@ -141,5 +143,60 @@
 		icons.$colorFilled24
 		icons.$codeFilled24
 		icons.$codeFilled24
+	))
+}
+
+#toolbar_edit .dialog_sidebar_pages {
+	@include assign-icons((
+		separators
+		edit
+		misc
+		tools
+		file
+		view
+		select
+		blockbench
+		animation
+		uv
+		transform
+		textures
+		layers
+		paint
+		display
+		color
+	), (
+		icons.$dividerShortRegular24
+		icons.$editRegular24
+		icons.$moreHorizontalRegular24
+		icons.$wrenchScrewdriverRegular24
+		icons.$documentRegular24
+		icons.$eyeRegular24
+		icons.$cursorRegular24
+		$blockbenchIcon
+		icons.$cubeQuickRegular24
+		icons.$transparencySquareRegular24
+		icons.$arrowMoveRegular24
+		icons.$imageRegular24
+		icons.$layerRegular24
+		icons.$paintBrushRegular24
+		icons.$laptopSettingsRegular24
+		icons.$colorRegular24
+	), (
+		icons.$dividerShortFilled24
+		icons.$editFilled24
+		icons.$moreHorizontalFilled24
+		icons.$wrenchScrewdriverFilled24
+		icons.$documentFilled24
+		icons.$eyeFilled24
+		icons.$cursorFilled24
+		$blockbenchIcon
+		icons.$cubeQuickFilled24
+		icons.$transparencySquareFilled24
+		icons.$arrowMoveFilled24
+		icons.$imageFilled24
+		icons.$layerFilled24
+		icons.$paintBrushFilled24
+		icons.$laptopSettingsFilled24
+		icons.$colorFilled24
 	))
 }
