Change checkbox to use inline-flex

--- a/sass/base/components/form/_checkbox.scss
+++ b/sass/base/components/form/_checkbox.scss
@@ -5,6 +5,7 @@
 input[type=checkbox]:not(.toggle_switch) {
 	position: relative;
 	@include mixins.flex-center;
+	display: inline-flex;
 
 	// color: var(--fui-Checkbox__indicator--color);
 	// background-color: var(--fui-Checkbox__indicator--backgroundColor);
