Update baseline themes to match Web Light and Web Dark

--- a/sass/theme/baseline/dark.scss
+++ b/sass/theme/baseline/dark.scss
@@ -84,34 +84,34 @@
     --colorNeutralForeground2Hover: #ffffff;
     --colorNeutralForeground2Pressed: #ffffff;
     --colorNeutralForeground2Selected: #ffffff;
-    --colorNeutralForeground2BrandHover: #4F82C8;
-    --colorNeutralForeground2BrandPressed: #3174C2;
-    --colorNeutralForeground2BrandSelected: #4F82C8;
+    --colorNeutralForeground2BrandHover: #479ef5;
+    --colorNeutralForeground2BrandPressed: #2886de;
+    --colorNeutralForeground2BrandSelected: #479ef5;
     --colorNeutralForeground3: #adadad;
     --colorNeutralForeground3Hover: #d6d6d6;
     --colorNeutralForeground3Pressed: #d6d6d6;
     --colorNeutralForeground3Selected: #d6d6d6;
-    --colorNeutralForeground3BrandHover: #4F82C8;
-    --colorNeutralForeground3BrandPressed: #3174C2;
-    --colorNeutralForeground3BrandSelected: #4F82C8;
+    --colorNeutralForeground3BrandHover: #479ef5;
+    --colorNeutralForeground3BrandPressed: #2886de;
+    --colorNeutralForeground3BrandSelected: #479ef5;
     --colorNeutralForeground4: #999999;
     --colorNeutralForegroundDisabled: #5c5c5c;
     --colorNeutralForegroundInvertedDisabled: rgba(255, 255, 255, 0.4);
-    --colorBrandForegroundLink: #4F82C8;
-    --colorBrandForegroundLinkHover: #6790CF;
-    --colorBrandForegroundLinkPressed: #3174C2;
-    --colorBrandForegroundLinkSelected: #4F82C8;
+    --colorBrandForegroundLink: #479ef5;
+    --colorBrandForegroundLinkHover: #62abf5;
+    --colorBrandForegroundLinkPressed: #2886de;
+    --colorBrandForegroundLinkSelected: #479ef5;
     --colorNeutralForeground2Link: #d6d6d6;
     --colorNeutralForeground2LinkHover: #ffffff;
     --colorNeutralForeground2LinkPressed: #ffffff;
     --colorNeutralForeground2LinkSelected: #ffffff;
-    --colorCompoundBrandForeground1: #4F82C8;
-    --colorCompoundBrandForeground1Hover: #6790CF;
-    --colorCompoundBrandForeground1Pressed: #3174C2;
-    --colorBrandForeground1: #6790CF;
-    --colorBrandForeground2: #7D9ED5;
-    --colorBrandForeground2Hover: #92ACDC;
-    --colorBrandForeground2Pressed: #CDD8EF;
+    --colorCompoundBrandForeground1: #479ef5;
+    --colorCompoundBrandForeground1Hover: #62abf5;
+    --colorCompoundBrandForeground1Pressed: #2886de;
+    --colorBrandForeground1: #479ef5;
+    --colorBrandForeground2: #62abf5;
+    --colorBrandForeground2Hover: #96c6fa;
+    --colorBrandForeground2Pressed: #ebf3fc;
     --colorNeutralForeground1Static: #242424;
     --colorNeutralForegroundStaticInverted: #ffffff;
     --colorNeutralForegroundInverted: #242424;
@@ -124,13 +124,13 @@
     --colorNeutralForegroundInvertedLinkHover: #ffffff;
     --colorNeutralForegroundInvertedLinkPressed: #ffffff;
     --colorNeutralForegroundInvertedLinkSelected: #ffffff;
-    --colorBrandForegroundInverted: #1267B4;
-    --colorBrandForegroundInvertedHover: #18599B;
-    --colorBrandForegroundInvertedPressed: #1B4C82;
-    --colorBrandForegroundOnLight: #1267B4;
-    --colorBrandForegroundOnLightHover: #18599B;
-    --colorBrandForegroundOnLightPressed: #1B3F6A;
-    --colorBrandForegroundOnLightSelected: #1B4C82;
+    --colorBrandForegroundInverted: #0f6cbd;
+    --colorBrandForegroundInvertedHover: #115ea3;
+    --colorBrandForegroundInvertedPressed: #0f548c;
+    --colorBrandForegroundOnLight: #0f6cbd;
+    --colorBrandForegroundOnLightHover: #115ea3;
+    --colorBrandForegroundOnLightPressed: #0e4775;
+    --colorBrandForegroundOnLightSelected: #0f548c;
     --colorNeutralBackground1: #292929;
     --colorNeutralBackground1Hover: #3d3d3d;
     --colorNeutralBackground1Pressed: #1f1f1f;
@@ -179,23 +179,23 @@
     --colorNeutralStencil2Alpha: rgba(255, 255, 255, 0.05);
     --colorBackgroundOverlay: rgba(0, 0, 0, 0.5);
     --colorScrollbarOverlay: rgba(255, 255, 255, 0.6);
-    --colorBrandBackground: #18599B;
-    --colorBrandBackgroundHover: #1267B4;
-    --colorBrandBackgroundPressed: #193253;
-    --colorBrandBackgroundSelected: #1B4C82;
-    --colorCompoundBrandBackground: #4F82C8;
-    --colorCompoundBrandBackgroundHover: #6790CF;
-    --colorCompoundBrandBackgroundPressed: #3174C2;
-    --colorBrandBackgroundStatic: #1267B4;
-    --colorBrandBackground2: #111723;
-    --colorBrandBackground2Hover: #193253;
-    --colorBrandBackground2Pressed: #020305;
-    --colorBrandBackground3Static: #1B4C82;
-    --colorBrandBackground4Static: #193253;
+    --colorBrandBackground: #115ea3;
+    --colorBrandBackgroundHover: #0f6cbd;
+    --colorBrandBackgroundPressed: #0c3b5e;
+    --colorBrandBackgroundSelected: #0f548c;
+    --colorCompoundBrandBackground: #479ef5;
+    --colorCompoundBrandBackgroundHover: #62abf5;
+    --colorCompoundBrandBackgroundPressed: #2886de;
+    --colorBrandBackgroundStatic: #0f6cbd;
+    --colorBrandBackground2: #082338;
+    --colorBrandBackground2Hover: #0c3b5e;
+    --colorBrandBackground2Pressed: #061724;
+    --colorBrandBackground3Static: #0f548c;
+    --colorBrandBackground4Static: #0c3b5e;
     --colorBrandBackgroundInverted: #ffffff;
-    --colorBrandBackgroundInvertedHover: #CDD8EF;
-    --colorBrandBackgroundInvertedPressed: #A6BAE2;
-    --colorBrandBackgroundInvertedSelected: #BAC9E9;
+    --colorBrandBackgroundInvertedHover: #ebf3fc;
+    --colorBrandBackgroundInvertedPressed: #b4d6fa;
+    --colorBrandBackgroundInvertedSelected: #cfe4fa;
     --colorNeutralCardBackground: #333333;
     --colorNeutralCardBackgroundHover: #3d3d3d;
     --colorNeutralCardBackgroundPressed: #2e2e2e;
@@ -204,7 +204,7 @@
     --colorNeutralStrokeAccessible: #adadad;
     --colorNeutralStrokeAccessibleHover: #bdbdbd;
     --colorNeutralStrokeAccessiblePressed: #b3b3b3;
-    --colorNeutralStrokeAccessibleSelected: #4F82C8;
+    --colorNeutralStrokeAccessibleSelected: #479ef5;
     --colorNeutralStroke1: #666666;
     --colorNeutralStroke1Hover: #757575;
     --colorNeutralStroke1Pressed: #6b6b6b;
@@ -217,14 +217,14 @@
     --colorNeutralStrokeOnBrand2Hover: #ffffff;
     --colorNeutralStrokeOnBrand2Pressed: #ffffff;
     --colorNeutralStrokeOnBrand2Selected: #ffffff;
-    --colorBrandStroke1: #4F82C8;
-    --colorBrandStroke2: #1B3F6A;
-    --colorBrandStroke2Hover: #1B3F6A;
-    --colorBrandStroke2Pressed: #16263D;
-    --colorBrandStroke2Contrast: #1B3F6A;
-    --colorCompoundBrandStroke: #4F82C8;
-    --colorCompoundBrandStrokeHover: #6790CF;
-    --colorCompoundBrandStrokePressed: #3174C2;
+    --colorBrandStroke1: #479ef5;
+    --colorBrandStroke2: #0e4775;
+    --colorBrandStroke2Hover: #0e4775;
+    --colorBrandStroke2Pressed: #0a2e4a;
+    --colorBrandStroke2Contrast: #0e4775;
+    --colorCompoundBrandStroke: #479ef5;
+    --colorCompoundBrandStrokeHover: #62abf5;
+    --colorCompoundBrandStrokePressed: #2886de;
     --colorNeutralStrokeDisabled: #424242;
     --colorNeutralStrokeInvertedDisabled: rgba(255, 255, 255, 0.4);
     --colorTransparentStroke: transparent;
