--- a/sass/theme/baseline/light.scss
+++ b/sass/theme/baseline/light.scss
@@ -84,34 +84,34 @@
     --colorNeutralForeground2Hover: #242424;
     --colorNeutralForeground2Pressed: #242424;
     --colorNeutralForeground2Selected: #242424;
-    --colorNeutralForeground2BrandHover: #1267B4;
-    --colorNeutralForeground2BrandPressed: #18599B;
-    --colorNeutralForeground2BrandSelected: #1267B4;
+    --colorNeutralForeground2BrandHover: #0f6cbd;
+    --colorNeutralForeground2BrandPressed: #115ea3;
+    --colorNeutralForeground2BrandSelected: #0f6cbd;
     --colorNeutralForeground3: #616161;
     --colorNeutralForeground3Hover: #424242;
     --colorNeutralForeground3Pressed: #424242;
     --colorNeutralForeground3Selected: #424242;
-    --colorNeutralForeground3BrandHover: #1267B4;
-    --colorNeutralForeground3BrandPressed: #18599B;
-    --colorNeutralForeground3BrandSelected: #1267B4;
+    --colorNeutralForeground3BrandHover: #0f6cbd;
+    --colorNeutralForeground3BrandPressed: #115ea3;
+    --colorNeutralForeground3BrandSelected: #0f6cbd;
     --colorNeutralForeground4: #707070;
     --colorNeutralForegroundDisabled: #bdbdbd;
     --colorNeutralForegroundInvertedDisabled: rgba(255, 255, 255, 0.4);
-    --colorBrandForegroundLink: #18599B;
-    --colorBrandForegroundLinkHover: #1B4C82;
-    --colorBrandForegroundLinkPressed: #193253;
-    --colorBrandForegroundLinkSelected: #18599B;
+    --colorBrandForegroundLink: #115ea3;
+    --colorBrandForegroundLinkHover: #0f548c;
+    --colorBrandForegroundLinkPressed: #0c3b5e;
+    --colorBrandForegroundLinkSelected: #115ea3;
     --colorNeutralForeground2Link: #424242;
     --colorNeutralForeground2LinkHover: #242424;
     --colorNeutralForeground2LinkPressed: #242424;
     --colorNeutralForeground2LinkSelected: #242424;
-    --colorCompoundBrandForeground1: #1267B4;
-    --colorCompoundBrandForeground1Hover: #18599B;
-    --colorCompoundBrandForeground1Pressed: #1B4C82;
-    --colorBrandForeground1: #1267B4;
-    --colorBrandForeground2: #18599B;
-    --colorBrandForeground2Hover: #1B4C82;
-    --colorBrandForeground2Pressed: #16263D;
+    --colorCompoundBrandForeground1: #0f6cbd;
+    --colorCompoundBrandForeground1Hover: #115ea3;
+    --colorCompoundBrandForeground1Pressed: #0f548c;
+    --colorBrandForeground1: #0f6cbd;
+    --colorBrandForeground2: #115ea3;
+    --colorBrandForeground2Hover: #0f548c;
+    --colorBrandForeground2Pressed: #0a2e4a;
     --colorNeutralForeground1Static: #242424;
     --colorNeutralForegroundStaticInverted: #ffffff;
     --colorNeutralForegroundInverted: #ffffff;
@@ -124,13 +124,13 @@
     --colorNeutralForegroundInvertedLinkHover: #ffffff;
     --colorNeutralForegroundInvertedLinkPressed: #ffffff;
     --colorNeutralForegroundInvertedLinkSelected: #ffffff;
-    --colorBrandForegroundInverted: #4F82C8;
-    --colorBrandForegroundInvertedHover: #6790CF;
-    --colorBrandForegroundInvertedPressed: #4F82C8;
-    --colorBrandForegroundOnLight: #1267B4;
-    --colorBrandForegroundOnLightHover: #18599B;
-    --colorBrandForegroundOnLightPressed: #1B3F6A;
-    --colorBrandForegroundOnLightSelected: #1B4C82;
+    --colorBrandForegroundInverted: #479ef5;
+    --colorBrandForegroundInvertedHover: #62abf5;
+    --colorBrandForegroundInvertedPressed: #479ef5;
+    --colorBrandForegroundOnLight: #0f6cbd;
+    --colorBrandForegroundOnLightHover: #115ea3;
+    --colorBrandForegroundOnLightPressed: #0e4775;
+    --colorBrandForegroundOnLightSelected: #0f548c;
     --colorNeutralBackground1: #ffffff;
     --colorNeutralBackground1Hover: #f5f5f5;
     --colorNeutralBackground1Pressed: #e0e0e0;
@@ -179,23 +179,23 @@
     --colorNeutralStencil2Alpha: rgba(0, 0, 0, 0.05);
     --colorBackgroundOverlay: rgba(0, 0, 0, 0.4);
     --colorScrollbarOverlay: rgba(0, 0, 0, 0.5);
-    --colorBrandBackground: #1267B4;
-    --colorBrandBackgroundHover: #18599B;
-    --colorBrandBackgroundPressed: #193253;
-    --colorBrandBackgroundSelected: #1B4C82;
-    --colorCompoundBrandBackground: #1267B4;
-    --colorCompoundBrandBackgroundHover: #18599B;
-    --colorCompoundBrandBackgroundPressed: #1B4C82;
-    --colorBrandBackgroundStatic: #1267B4;
-    --colorBrandBackground2: #CDD8EF;
-    --colorBrandBackground2Hover: #BAC9E9;
-    --colorBrandBackground2Pressed: #92ACDC;
-    --colorBrandBackground3Static: #1B4C82;
-    --colorBrandBackground4Static: #193253;
+    --colorBrandBackground: #0f6cbd;
+    --colorBrandBackgroundHover: #115ea3;
+    --colorBrandBackgroundPressed: #0c3b5e;
+    --colorBrandBackgroundSelected: #0f548c;
+    --colorCompoundBrandBackground: #0f6cbd;
+    --colorCompoundBrandBackgroundHover: #115ea3;
+    --colorCompoundBrandBackgroundPressed: #0f548c;
+    --colorBrandBackgroundStatic: #0f6cbd;
+    --colorBrandBackground2: #ebf3fc;
+    --colorBrandBackground2Hover: #cfe4fa;
+    --colorBrandBackground2Pressed: #96c6fa;
+    --colorBrandBackground3Static: #0f548c;
+    --colorBrandBackground4Static: #0c3b5e;
     --colorBrandBackgroundInverted: #ffffff;
-    --colorBrandBackgroundInvertedHover: #CDD8EF;
-    --colorBrandBackgroundInvertedPressed: #A6BAE2;
-    --colorBrandBackgroundInvertedSelected: #BAC9E9;
+    --colorBrandBackgroundInvertedHover: #ebf3fc;
+    --colorBrandBackgroundInvertedPressed: #b4d6fa;
+    --colorBrandBackgroundInvertedSelected: #cfe4fa;
     --colorNeutralCardBackground: #fafafa;
     --colorNeutralCardBackgroundHover: #ffffff;
     --colorNeutralCardBackgroundPressed: #f5f5f5;
@@ -204,7 +204,7 @@
     --colorNeutralStrokeAccessible: #616161;
     --colorNeutralStrokeAccessibleHover: #575757;
     --colorNeutralStrokeAccessiblePressed: #4d4d4d;
-    --colorNeutralStrokeAccessibleSelected: #1267B4;
+    --colorNeutralStrokeAccessibleSelected: #0f6cbd;
     --colorNeutralStroke1: #d1d1d1;
     --colorNeutralStroke1Hover: #c7c7c7;
     --colorNeutralStroke1Pressed: #b3b3b3;
@@ -217,14 +217,14 @@
     --colorNeutralStrokeOnBrand2Hover: #ffffff;
     --colorNeutralStrokeOnBrand2Pressed: #ffffff;
     --colorNeutralStrokeOnBrand2Selected: #ffffff;
-    --colorBrandStroke1: #1267B4;
-    --colorBrandStroke2: #A6BAE2;
-    --colorBrandStroke2Hover: #7D9ED5;
-    --colorBrandStroke2Pressed: #1267B4;
-    --colorBrandStroke2Contrast: #A6BAE2;
-    --colorCompoundBrandStroke: #1267B4;
-    --colorCompoundBrandStrokeHover: #18599B;
-    --colorCompoundBrandStrokePressed: #1B4C82;
+    --colorBrandStroke1: #0f6cbd;
+    --colorBrandStroke2: #b4d6fa;
+    --colorBrandStroke2Hover: #77b7f7;
+    --colorBrandStroke2Pressed: #0f6cbd;
+    --colorBrandStroke2Contrast: #b4d6fa;
+    --colorCompoundBrandStroke: #0f6cbd;
+    --colorCompoundBrandStrokeHover: #115ea3;
+    --colorCompoundBrandStrokePressed: #0f548c;
     --colorNeutralStrokeDisabled: #e0e0e0;
     --colorNeutralStrokeInvertedDisabled: rgba(255, 255, 255, 0.4);
     --colorTransparentStroke: transparent;
@@ -424,12 +424,12 @@
     --colorStatusDangerBorder2: #c50f1f;
     --colorStatusDangerBackground3Hover: #b10e1c;
     --colorStatusDangerBackground3Pressed: #960b18;
-    --shadow2: 0 0 2px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.14);
-    --shadow4: 0 0 2px rgba(0,0,0,0.12), 0 2px 4px rgba(0,0,0,0.14);
-    --shadow8: 0 0 2px rgba(0,0,0,0.12), 0 4px 8px rgba(0,0,0,0.14);
-    --shadow16: 0 0 2px rgba(0,0,0,0.12), 0 8px 16px rgba(0,0,0,0.14);
-    --shadow28: 0 0 8px rgba(0,0,0,0.12), 0 14px 28px rgba(0,0,0,0.14);
-    --shadow64: 0 0 8px rgba(0,0,0,0.12), 0 32px 64px rgba(0,0,0,0.14);
+    --shadow2: 0 0 2px rgba(0,0,0,0.24), 0 1px 2px rgba(0,0,0,0.28);
+    --shadow4: 0 0 2px rgba(0,0,0,0.24), 0 2px 4px rgba(0,0,0,0.28);
+    --shadow8: 0 0 2px rgba(0,0,0,0.24), 0 4px 8px rgba(0,0,0,0.28);
+    --shadow16: 0 0 2px rgba(0,0,0,0.24), 0 8px 16px rgba(0,0,0,0.28);
+    --shadow28: 0 0 8px rgba(0,0,0,0.24), 0 14px 28px rgba(0,0,0,0.28);
+    --shadow64: 0 0 8px rgba(0,0,0,0.24), 0 32px 64px rgba(0,0,0,0.28);
     --shadow2Brand: 0 0 2px rgba(0,0,0,0.30), 0 1px 2px rgba(0,0,0,0.25);
     --shadow4Brand: 0 0 2px rgba(0,0,0,0.30), 0 2px 4px rgba(0,0,0,0.25);
     --shadow8Brand: 0 0 2px rgba(0,0,0,0.30), 0 4px 8px rgba(0,0,0,0.25);
