--- a/sass/base/components/_form.scss
+++ b/sass/base/components/_form.scss
@@ -7,6 +7,7 @@
 @use './form/checkbox';
 @use './form/dialog-form-btn';
 @use './form/dialog';
+@use './form/slider';
 @use './form/switch';
 @use './form/tool';
 @use './form/tooltip';
