Apply rounding to canvas, and use variables for center rounding

--- a/sass/base/components/_mainView.scss
+++ b/sass/base/components/_mainView.scss
@@ -4,6 +4,10 @@
 
 #center {
     border: var(--strokeWidthThin) solid var(--colorTransparentStroke);
+    border-radius: var(--borderRadiusXLarge);
+    canvas {
+        border-radius: var(--borderRadiusXLarge);
+    }
 }
 
 #preview {
