--- a/sass/base/components/_mainView.scss
+++ b/sass/base/components/_mainView.scss
@@ -2,6 +2,10 @@
 @use '../mixins';
 @use '../icons';
 
+body {
+    padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+}
+
 #center {
     border: var(--strokeWidthThin) solid var(--colorTransparentStroke);
     border-radius: var(--borderRadiusXLarge);
