--- a/sass/base/components/_startScreen.scss
+++ b/sass/base/components/_startScreen.scss
@@ -44,7 +44,7 @@
       // box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
       // border-radius: 5px;
       // cursor: pointer;
-      @include mixins.card();
+      @include mixins.card-filled((), true);
       --fui-Card--size: var(--spacingHorizontalM);
     }
   }
