--- a/sass/base/components/_form.scss
+++ b/sass/base/components/_form.scss
@@ -9,6 +9,7 @@
 @use './form/dialog';
 @use './form/slider';
 @use './form/switch';
+@use './form/tab-bar';
 @use './form/tool';
 @use './form/tooltip';
 
